# iRM_Embedded_2023

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
.run/: example_led_typeC.elf.run.xml  example_motor_m4310_vel.elf.run.xml  example_motor_m4310_vel_autozero.elf.run.xml
boards/: CMakeLists.txt
boards/DJI_Board_TypeA/: DJI_Board_TypeA.ioc  Makefile  STM32F427IIHx_FLASH.ld
boards/DJI_Board_TypeC/: CMakeLists.txt  DJI_Board_TypeC.ioc  Makefile  STM32F407IGHx_FLASH.ld
boards/DM_MC_01/: CMakeLists.txt  DM_MC01_general.ioc  DM_MC_01.ioc  Makefile  README.md  STM32F446RCTx_FLASH.ld
boards/F103C8/: F103C8.ioc  Makefile  STM32F103C8Tx_FLASH.ld
boards/Nucleo-f103rb/: CMakeLists.txt  Makefile  STM32F103RBTx_FLASH.ld  nucleo-f103rb.ioc
boards/Nucleo-f103rb/Core/Inc/: main.h  stm32f1xx_it.h
boards/Nucleo-f103rb/Core/Src/: freertos.c  gpio.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  tim.c  usart.c
cmake/: build_helper.cmake
debug/OpenOCD/: cmsis-dap.cfg  stlink_f1.cfg  stlink_f4.cfg
docs/: config.md  homepage.md
examples/: CMakeLists.txt
examples/Balancing/: CMakeLists.txt  balance.cc  balance.h  main.cc  wheeled_legged.cc  wheeled_legged.h
examples/VFD_Clock/: CMakeLists.txt  main.cc
examples/arm/: CMakeLists.txt  arm.h  arm_config.h  arm_controller.cc  arm_dbus.cc  arm_test.cc  main.cc  mc01.cc  typeC.cc
examples/autoaim/: CMakeLists.txt  main.cc
examples/balance/: CMakeLists.txt  balance_m2006.cc
examples/brt_encoder/: CMakeLists.txt  main.cc
examples/buzzer/: main.cc
examples/can_bridge/: CMakeLists.txt  receive.cc  receive2.cc  send.cc
examples/chassis/: CMakeLists.txt  chassis_power_graph.py  main.cc  new.cc  typeC.cc
examples/cybergear/: CMakeLists.txt  main.cc
examples/dbus/: CMakeLists.txt  main.cc  mc01.cc  typeA.cc
examples/eigen/: typeA.cc
examples/fortress/: main.cc
examples/gimbal/: CMakeLists.txt  double_shooter.cc  imu_stablized.cc  m3510.cc  main.cc  typeC.cc  typeC_fortress.cc
examples/hero/: CMakeLists.txt  hero_shooter_2023.cc  main.cc
examples/hero_test/: main.cc
examples/imu/: calibrate.cc  magCal.m  main.cc  poseEstimate.cc  typeC.cc
examples/iwdg/: CMakeLists.txt  main.cc
examples/laser/: main.cc
examples/laser_dist_meas/: CMakeLists.txt  laser_dist_meas.cc
examples/led/: CMakeLists.txt  mc01.cc  nucleo.cc  typeA.cc  typeC.cc
examples/lidar07/: i2c.cc  uart.cc
examples/minipc/: CMakeLists.txt  ChassisTest.cc  ColorTest.cc  LatencyTest.cc  MiniPCController.cc  MotorTest.cc  PingpongTest.cc  PingpongTestPlus.cc  StressTestTypeC.cc  test.cc  typeA.cc  typeC.cc
examples/motor/: CMakeLists.txt  HERO_SERVO.cc  dbus_control_motor_arm.cc  m2006_antijam.cc  m2006_double_continue_shoot.cc  m2006_double_shoot.cc  m2006_reload_modes.cc  m3508.cc  m3508_100.cc  m3508_antijam.cc  m3508_position.cc  m3508_servo.cc  m3508_speed.cc  m3508_speed_2motor.cc  m3508_steering.cc  m3510.cc  m3510_PID.cc  m4310.cc  m4310_mit.cc  m4310_mit_mc01.cc  m4310_pos_vel.cc  m4310_vel.cc  m4310_vel_autozero.cc  m6020.cc  m6623.cc  pwm.cc  test.txt
examples/oled/: main.cc
examples/pacific_rim/: CMakeLists.txt  main.cc
examples/protocol/: client.cc  host.cc
examples/referee/: main.cc
examples/relay/: CMakeLists.txt  DM_MC.cc  Transistor_TypeC.cc  TypeA.cc  TypeC.cc
examples/rtos/: CMakeLists.txt  eventflag.cc  spinlock.cc  typeA.cc
examples/sbus/: CMakeLists.txt  main.cc  mc01.cc
examples/sdio/: main.cc
examples/sen_0366/: CMakeLists.txt  main.cc
examples/sensor/: main.cc
examples/shooter/: CMakeLists.txt  flywheels.cc  m3508_hero_load.cc  shooter.cc  three_modes_shooter.cc
examples/steering/: CMakeLists.txt  main.cc  steering_alignment.cc
examples/stepper/: main.cc
examples/supercap/: main.cc
examples/trapezoid_profile/: CMakeLists.txt  main.cc
examples/trigger/: CMakeLists.txt  main.cc
examples/turret/: turret.cc
examples/uart/: CMakeLists.txt  main.cc
examples/ui/: CMakeLists.txt  main.cc
examples/ultrasonic/: main.cc
examples/unitree_motor/: CMakeLists.txt  ZJUI_mc01.cc  dm_a1.cc  main.cc  mc01.cc  typeC.cc
examples/uros/: CMakeLists.txt  main.cc
examples/usb/: main.cc
shared/: CMakeLists.txt
shared/bsp/: bsp_buzzer.cc  bsp_buzzer.h  bsp_can.cc  bsp_can.h  bsp_can_bridge.cc  bsp_can_bridge.h  bsp_error_handler.cc  bsp_error_handler.h  bsp_gpio.cc  bsp_gpio.h  bsp_heater.cc  bsp_heater.h  bsp_imu.cc  bsp_imu.h  bsp_laser.cc  bsp_laser.h  bsp_memory.cc  bsp_mpu6500_reg.h  bsp_os.cc  bsp_os.h  bsp_print.cc  bsp_print.h  bsp_pwm.cc  bsp_pwm.h  bsp_relay.cc  bsp_relay.h  bsp_sdio.cc  bsp_sdio.h  bsp_uart.cc  bsp_uart.h  bsp_ultrasonic.cc  bsp_ultrasonic.h  bsp_usb.cc  bsp_usb.h
shared/libraries/: A1_motor_drive.c  A1_motor_drive.cc  A1_motor_drive.h  DS3231.cc  DS3231.h  ESP8266.cc  ESP8266.h  autoaim_protocol.cc  autoaim_protocol.h  chassis.cc  chassis.h  controller.cc  controller.h  crc8.cc  crc8.h  cybergear.cc  cybergear.h  dbus.cc  dbus.h  encoder.cc  encoder.h  (+54 more)
vehicles/: CMakeLists.txt
(+211 files in other folders)
